# online-digital-circuit-simulator

./: .gitignore  LICENSE  README.md
cpp/: .ycm_extra_conf.py  CMakeLists.txt
cpp/application/: CMakeLists.txt  server.cpp
cpp/data/test/engine/simulator/: test.vhd
cpp/data/test/engine/vcd_parser/: test.vcd
cpp/data/vhdl/: 74LS00.vhd  74LS04.vhd  74LS11.vhd  74LS20.vhd  74LS27.vhd  74LS86.vhd  AND_GATE3.vhd  MOD_74LS00.vhd  MOD_74LS04.vhd  MOD_74LS11.vhd  MOD_74LS125.vhd  MOD_74LS161.vhd  MOD_74LS20.vhd  MOD_74LS253.vhd  MOD_74LS27.vhd  MOD_74LS74.vhd  MOD_74LS75.vhd  MOD_74LS85.vhd  MOD_74LS86.vhd  MOD_74LS90.vhd  NAND_GATE2.vhd  NAND_GATE4.vhd  NOR_GATE3.vhd  NOT_GATE1.vhd  XOR_GATE2.vhd  and3.vhd  chip_list.txt  not1.vhd  notand2.vhd  notand4.vhd  notor3.vhd  xor2.vhd
cpp/engine/: CMakeLists.txt
cpp/engine/handler/: engine_handler.cc  engine_handler.h
cpp/engine/module/chip_init/: chip_init.cc  chip_init.h
cpp/engine/module/circuit_parser/: circuit_parser.cc  circuit_parser.h
cpp/engine/module/mod_organizer/: mod_organizer.cc  mod_organizer.h
cpp/engine/module/simulator/: simulator.cc  simulator.h
cpp/engine/module/vcd_parser/: vcd_parser.cc  vcd_parser.h
cpp/engine/module/vhdl_parser/: vhdl_parser.cc  vhdl_parser.h
cpp/engine/public/: engine.h
cpp/engine/util/: macro.h  md5.cc  md5.h  struct.h  util.cc  util.h
cpp/proto/: CMakeLists.txt  CircuitProto.proto  ModuleProto.proto  add.py  allChiops.p  allModules  circuit.proto  circuit_parsing_result.proto  module.proto  readme  request.proto  simulation_result.proto  vhdl_parsing_result.proto
cpp/test/engine/: CMakeLists.txt  circuit_parser.cc  circuit_parser_test.cc  mod_organizer.cc  mod_organizer_test.cc  simulator_test.cc  vcd_parser_test.cc  vhdl_parser_test.cc
database/: db.opr  db_import.sh  importUsers.py  readme  users.xlsx
psjjjj/: config.py
psjjjj/app/: __init__.py  views.py
psjjjj/app/static/flowchart/: app.js
psjjjj/app/templates/: graph.html  index.html
web/psjjjj/: config.py  db.opr  db.sh  run.py
web/psjjjj/app/: __init__.py  __init__.py~  activate.py  client.py  database.py  detail.py  forms.py  item.py  model.py  request_pb2.py  views.py  views.py~
web/psjjjj/app/doc/: Notes on NgFlowchart.md  NotesOnNgFlowchart.md
web/psjjjj/app/static/: app.js  ngFlowchart.js  onedatastyle.css  style.css  style1.css
web/psjjjj/app/static/flowchart/: addgraph.html  app.js  ngFlowchart.js  onedatastyle.css
web/psjjjj/app/templates/: account.html  addGraph.html  addTask.html  addVHDL.html  base.html  base.html~  checkPassword.html  detail.html  detail_admin.html  error.html  graph.html  index.html  login.html  login.html~  management.html  resetPassword.html  result.html  showVHDL.html  showinput.html  students.html  studio.html  submissionlist.html  submitted.html  task.html  tasklist.html  vhdl.html
